Bug 1486204 - Make nsLookAndFeel.mm return transparent selection colors. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D8210